[tool.poetry]
name = "backend-to-python"
version = "0.1.0"
description = ""
authors = ["Eduard Poliakov <ya.polykov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
uvicorn = "^0.30.6"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
